--- a/Lab Class-7/index.html
+++ b/Lab Class-7/index.html
@@ -198,7 +198,7 @@
 
     <style>
   .custom-navbar {
-    background: linear-gradient(90deg, #ff416c, #ff4b2b); /* Pink to Orange gradient */
+    background: linear-gradient(90deg, #ff416c, #ff4b2b); 
   }
   .custom-navbar .navbar-brand,
   .custom-navbar .nav-link {
@@ -208,21 +208,21 @@
   }
   .custom-navbar .nav-link:hover,
   .custom-navbar .nav-link.active {
-    color: #ffd700 !important; /* Gold color on hover/active */
+    color: #ffd700 !important; 
   }
   .custom-navbar .dropdown-menu {
-    background: linear-gradient(45deg, #ff4b2b, #ff416c); /* Reverse gradient */
+    background: linear-gradient(45deg, #ff4b2b, #ff416c); 
   }
   .custom-navbar .dropdown-item {
     color: white !important;
     transition: background-color 0.3s ease, color 0.3s ease;
   }
   .custom-navbar .dropdown-item:hover {
-    background-color: #ffd700 !important; /* Gold background on hover */
-    color: #ff4b2b !important; /* Text color change */
+    background-color: #ffd700 !important; 
+    color: #ff4b2b !important; 
   }
   .navbar-toggler-icon {
-    filter: invert(1); /* Toggler icon white for dark background */
+    filter: invert(1); 
   }
 </style>
 
